common/include/MBx_api.h

/* Exported types ------------------------------------------------------------*/

/***********地址映射表的定义***********/
/**
 * 定义MBx寄存器地址查询表的单条结构
 */
typedef struct
{
    uint32_t           Addr;   // 此条寄存器地址
    void              *Memory; // 内存区域头地址
    uint8_t            Type;   // 内存区域映射的数据类型
    MBX_MAP_REG_HANDLE Handle; // 写时处理函数
#if MBX_EXTEN_REG_HANDLE_ENABLE
    _MBX_REG_HANDLE_PARA *Para; // 写时传入协参
#endif
} _MBX_MAP_LIST_ENTRY;
/***********提供主机从机对象 共用的定义***********/
/**
 * @brief buffer定义
 * 线性buffer 采用指针便于动态申请内存
 * 发送、接收buffer的定义共用, 主机、从机的定义共用
 */
typedef struct
{
    uint8_t *Buffer; // 数据buffer绑定
    uint16_t Len;    // 数据长度变量
    uint16_t LenMAX; // 数据buffer的最大长度
} _MBX_EXIST;
/**
 * @brief modbus对象特性配置
 * 主机、从机的定义共用
 */
typedef struct
{
    uint8_t  ModbusModel:7; // modbus协议栈模型 见 /* modbus协议模式定义 */
    uint8_t  ModbusMode :1; // modbus主从模式 见 /* modbus主从模式定义 */
    uint32_t T1_5_Cycs;     // 1.5个字符应当间隔的轮询周期 us(由于采用轮询驱动, 轮询周期通常至少1ms, 此值意义不大, 如果一定要保证间隔, 应当以微秒级定时器运行驱动轮询)
    uint32_t T3_5_Cycs;     // 3.5个字符应当间隔的轮询周期 us(由于采用轮询驱动, 轮询周期通常至少1ms, 此值意义不大, 如果一定要保证间隔, 应当以微秒级定时器运行驱动轮询)

} _MBX_COMMON_CONFIG;
/**
 * @brief modbus通信发送接收函数的配置
 * 主机、从机的定义共用
 */
typedef struct
{
    MBX_SEND_PTR Send; // 数据发送函数绑定
    MBX_GTEC_PTR Getc; // 数据接收函数绑定
} _MBX_COMMON_FUNCTION;
/**
 * @brief modbus驱动的运行时变量
 */
typedef struct
{
    uint32_t TimeCnt;     // 周期累加, 用于驱动modbus协议
    uint32_t NoComNum :4; // 无通信计数 周期累加, 收到有效消息清空
    uint32_t State    :4; // 运行时状态机
    uint32_t StatePast:4; // 运行时状态机前一态寄存, 状态流转时可以处理数据
    uint32_t StateFlow:1; // 状态机立即流转动作 1立即流转 0按流程流转
    // uint32_t StateWait:1; // 状态机保持等待标识 1保持等待 0流转出去
    uint32_t reg:19; // 补位
} _MBX_COMMON_RUNTIME;
/***********提供从机对象使用的定义***********/
/**
 * @brief 从机特有的配置结构体
 */
typedef struct
{
    uint8_t                    SlaveID; // 从机号绑定
    const _MBX_MAP_LIST_ENTRY *Map;     // 地址映射表头
    uint16_t                   MapNum;  // 地址映射数量，自动遍历map产生
} _MBX_SLAVE_CONFIG;
/**
 * @brief 从机解析栈
 */
typedef struct
{
    uint8_t  Func;      // 解析到的功能码
    uint16_t RegData;   // 待处理的寄存器值
    uint16_t AddrStart; // 待处理的寄存器地址起始
    uint16_t RegNum;    // 待解析的寄存器数量
} _MBX_SLAVE_PARSE_VALUE;
/***********提供主机对象使用的定义***********/
/**
 * @brief 主机特有的配置结构体
 */
typedef struct
{
    uint8_t SlaveID; // 当前操作的从机号
} _MBX_MASTER_CONFIG;
/**
 * @brief 主机下管理的从机的配置结构体
 */
typedef struct _MBX_MASTER_TEAM_MEMBER
{
#if MBX_MODULE_TCP_MASTER_ENABLE
    uint16_t TransID; // modbusTCP专用, 当前累计的事务号
#endif
    uint8_t                         SlaveID; // 从机号绑定
    const _MBX_MAP_LIST_ENTRY      *Map;     // 地址映射表头
    uint16_t                        MapNum;  // 地址映射数量，自动遍历map产生
    struct _MBX_MASTER_TEAM_MEMBER *Next;    // 下一个从机
} _MBX_MASTER_TEAM_MEMBER;
/**
 * @brief 主机解析栈
 */
typedef struct
{
    uint8_t  Func;      // 解析到的功能码
    uint16_t RegData;   // 待处理的寄存器值
    uint16_t AddrStart; // 待处理的寄存器地址起始
    uint16_t RegNum;    // 待解析的寄存器数量

#if MBX_MODULE_TCP_MASTER_ENABLE
    /* 具有TCP主机功能，需要寄存所有的发送请求，需要寄存事务号 */
    uint16_t TransNum[MBX_MASTER_REQUEST_QUEUE_MAX];                                // 发送时的事务号
    uint8_t  SlaveID[MBX_MASTER_REQUEST_QUEUE_MAX];                                 // 发送时的从机ID
    uint8_t  SendFunc[MBX_MASTER_REQUEST_QUEUE_MAX];                                // 发送时的功能码
    uint16_t SendAddrStart[MBX_MASTER_REQUEST_QUEUE_MAX];                           // 发送时的地址起始
    uint16_t SendRegNum[MBX_MASTER_REQUEST_QUEUE_MAX];                              // 发送时的寄存器数量
    uint8_t  SendValue[MBX_MASTER_REQUEST_QUEUE_MAX][MBX_MASTER_MULTI_REG_MAX * 2]; // 发送时的设置值域
    uint8_t  Head;                                                                  // 环形队列的头指针(入)
    uint8_t  Tail;                                                                  // 环形队列的尾指针(出)
#else
    uint8_t  SlaveID;                                 // 发送时的从机ID
    uint8_t  SendFunc;                                // 发送时的功能码
    uint16_t SendAddrStart;                           // 发送时的地址起始
    uint16_t SendRegNum;                              // 发送时的寄存器数量
    uint8_t  SendValue[MBX_MASTER_MULTI_REG_MAX * 2]; // 发送时的设置值域
#endif
} _MBX_MASTER_PARSE_VALUE;
/**
 * @brief 主机对从指令失败的环形栈
 */
typedef struct
{
    uint8_t  SendFunc;      // 产生错误的帧 发送时的功能码
    uint8_t  ErrorCode;     // 产生错误的帧 错误码
    uint16_t SendAddrStart; // 产生错误的帧 发送时的地址起始
    uint16_t SendRegNum;    // 产生错误的帧 发送时的操作的寄存器数量
} _MBX_MASTER_ERROR_RING_NODE;
typedef struct
{
    _MBX_MASTER_ERROR_RING_NODE Queue[MBX_MASTER_ERROR_QUEUE_MAX]; // 错误环形队列
    uint8_t                     Head;                              // 环形队列的头指针(入)
    uint8_t                     Tail;                              // 环形队列的尾指针(出)
} _MBX_MASTER_ERROR_RING;
/**
 * @brief 主机对从指令待发送请求的环形栈
 */
typedef struct
{
    uint8_t  SlaveID;                             // 待发送的从机ID
    uint8_t  Func;                                // 待发送的功能码
    uint16_t AddrStart;                           // 待发送的地址起始
    uint16_t RegNum;                              // 待发送的寄存器数量
    uint8_t  Value[MBX_MASTER_MULTI_REG_MAX * 2]; // 待发送的设置值域
} _MBX_MASTER_REQUEST_RING_NODE;
typedef struct
{
    _MBX_MASTER_REQUEST_RING_NODE Queue[MBX_MASTER_REQUEST_QUEUE_MAX]; // 待发送请求队列
    uint8_t                       Head;                                // 环形队列的头指针(入)
    uint8_t                       Tail;                                // 环形队列的尾指针(出)
} _MBX_MASTER_REQUEST_RING;
/***********主从机对象的定义***********/
/**
 * @brief 定义modbus从机协议对象
 */
typedef struct _MBX_SLAVE
{
    /* 初始化时需赋固定值的部分 */
    _MBX_COMMON_RUNTIME Runtime; // 运行时变量
    _MBX_COMMON_CONFIG  Attr;    // 属性配置
    /* 需传入初始化函数进行配置的部分 */
    _MBX_EXIST           TxExist; // 供发送的buffer空间
    _MBX_EXIST           RxExist; // 供接收的buffer空间
    _MBX_COMMON_FUNCTION Func;    // 函数绑定
    _MBX_SLAVE_CONFIG    Config;  // 从机配置
    /* 解析过程使用 保持对象独立性 */
    _MBX_SLAVE_PARSE_VALUE Parse; // 解析栈
    /* 自动从机驱动, 链表支持 */
    struct _MBX_SLAVE *Next; // 从机链表指针
} _MBX_SLAVE;
/**
 * @brief 定义modbus主机协议对象
 */
typedef struct _MBX_MASTER
{
    /* 初始化时需赋固定值的部分 */
    _MBX_COMMON_RUNTIME      Runtime;        // 运行时变量
    _MBX_COMMON_CONFIG       Attr;           // 属性配置
    _MBX_MASTER_CONFIG       Config;         // 主机配置
    _MBX_MASTER_TEAM_MEMBER *SlaveChainRoot; // 从机链头
    /* 需传入初始化函数进行配置的部分 */
    _MBX_EXIST           TxExist; // 供发送的buffer空间
    _MBX_EXIST           RxExist; // 供接收的buffer空间
    _MBX_COMMON_FUNCTION Func;    // 函数绑定
    /* 解析过程使用 保持对象独立性 */
    _MBX_MASTER_PARSE_VALUE  Parse;   // 解析栈
    _MBX_MASTER_ERROR_RING   Error;   // 错误栈
    _MBX_MASTER_REQUEST_RING Request; // 请求栈
    /* 自动主机驱动, 链表支持 */
    struct _MBX_MASTER *Next; // 主机链表指针
} _MBX_MASTER;
/*从机API*/
MBX_API uint32_t MBx_Slave_RTU_Init(_MBX_SLAVE *MBxSlave, uint8_t SlaveID, const _MBX_MAP_LIST_ENTRY *MAP, MBX_SEND_PTR MBxSend, MBX_GTEC_PTR MBxGetc, uint32_t BaudRate, uint8_t *RxBuffer, uint32_t RxBufferSize, uint8_t *TxBuffer, uint32_t TxBufferSize);
MBX_API uint32_t MBx_Slave_TCP_Init(_MBX_SLAVE *MBxSlave, uint8_t SlaveID, const _MBX_MAP_LIST_ENTRY *MAP, MBX_SEND_PTR MBxSend, MBX_GTEC_PTR MBxGetc, uint8_t *RxBuffer, uint32_t RxBufferSize, uint8_t *TxBuffer, uint32_t TxBufferSize);
/*主机API*/
MBX_API uint32_t MBx_Master_RTU_Init(_MBX_MASTER *MBxMaster, MBX_SEND_PTR MBxSend, MBX_GTEC_PTR MBxGetc, uint32_t BaudRate, uint8_t *RxBuffer, uint32_t RxBufferSize, uint8_t *TxBuffer, uint32_t TxBufferSize);
MBX_API uint32_t MBx_Master_TCP_Init(_MBX_MASTER *MBxMaster, MBX_SEND_PTR MBxSend, MBX_GTEC_PTR MBxGetc, uint8_t *RxBuffer, uint32_t RxBufferSize, uint8_t *TxBuffer, uint32_t TxBufferSize);
MBX_API uint32_t MBx_Master_Member_Add(_MBX_MASTER *MBxMaster, _MBX_MASTER_TEAM_MEMBER *MBxMember, uint8_t SlaveID, const _MBX_MAP_LIST_ENTRY *MAP);
MBX_API uint32_t MBx_Master_Error_Get(_MBX_MASTER *pMaster, uint8_t *Func, uint8_t *Error, uint16_t *AddrStart, uint16_t *RegNum);
MBX_API uint32_t MBx_Master_Read_Coil_Request(_MBX_MASTER *pMaster, uint8_t SlaveID, uint16_t StartAddr, uint16_t ReadNum);
MBX_API uint32_t MBx_Master_Read_Disc_Input_Request(_MBX_MASTER *pMaster, uint8_t SlaveID, uint16_t StartAddr, uint16_t ReadNum);
MBX_API uint32_t MBx_Master_Read_Reg_Request(_MBX_MASTER *pMaster, uint8_t SlaveID, uint16_t StartAddr, uint16_t ReadNum);
MBX_API uint32_t MBx_Master_Read_Input_Reg_Request(_MBX_MASTER *pMaster, uint8_t SlaveID, uint16_t StartAddr, uint16_t ReadNum);
MBX_API uint32_t MBx_Master_Write_Coil_Request(_MBX_MASTER *pMaster, uint8_t SlaveID, uint16_t Addr, uint16_t Value);
MBX_API uint32_t MBx_Master_Write_Reg_Request(_MBX_MASTER *pMaster, uint8_t SlaveID, uint16_t Addr, uint16_t Value);
MBX_API uint32_t MBx_Master_Write_Coil_Mul_Request(_MBX_MASTER *pMaster, uint8_t SlaveID, uint16_t StartAddr, uint16_t WriteNum, uint8_t *Data, uint16_t DataLen);
MBX_API uint32_t MBx_Master_Write_Reg_Mul_Request(_MBX_MASTER *pMaster, uint8_t SlaveID, uint16_t StartAddr, uint16_t WriteNum, uint8_t *Data, uint16_t DataLen);
/*地址映射表API*/

/* 便于拓展应用的开发, 用户无需调用 */
extern void     MBx_Init_Runtime(_MBX_COMMON_RUNTIME *MBxRuntime);
extern void     MBx_Init_Attr(_MBX_COMMON_CONFIG *MBxAttr, uint8_t Model, uint8_t Mode, uint32_t para1, uint32_t para2);
extern void     MBx_Init_Slave_Parse(_MBX_SLAVE_PARSE_VALUE *MBxSlaveParse);
extern uint32_t MBx_Init_Slave_Config(_MBX_SLAVE_CONFIG *MBxSlaveConfig, uint8_t ID, const _MBX_MAP_LIST_ENTRY *MAP);
extern void     MBx_Init_Master_Parse(_MBX_MASTER_PARSE_VALUE *MBxMasterParse);
extern void     MBx_Init_Master_Error(_MBX_MASTER_ERROR_RING *MBxMasterError);
extern void     MBx_Init_Master_Request(_MBX_MASTER_REQUEST_RING *MBxMasterRequest);
extern uint32_t MBx_Init_Master_Config(_MBX_MASTER_TEAM_MEMBER *MBxMasterConfig, uint8_t ID, const _MBX_MAP_LIST_ENTRY *MAP);