common/include/MBx_utility.h

/* Exported types ------------------------------------------------------------*/
/**
 * @brief 一个方便的CRC16结构
 */
typedef struct
{
    uint8_t L8; // 低8位
    uint8_t H8; // 高8位
} _MBX_CRC16_H_L;
typedef union _MBX_CRC16_R_
{
    uint16_t       Val;
    _MBX_CRC16_H_L H_L;
} _MBX_CRC16;
/**
 * @brief MBx的错误追踪单条目设定, 于模块源码MBx_utility_err_trace.c中声明错误追踪队列
 */
typedef struct
{
    uint8_t  SlaveID; // 错误出现的从机ID 对于从机是本机从机号, 对于主机是期望与其通信的从机号
    uint8_t  mode :1; // 错误出现的对象的类型 0从机 1主机
    uint8_t  State:4; // 错误出现时对象的运行时状态机
    uint8_t  reg  :3; // 填位
    uint32_t ErrCode; // 错误码 见MBx_api.h的/* API返回集 */定义
} _MBX_ERR_TRACE;
extern _MBX_ERR_TRACE MBxErrTraceStack[];
/* Exported functions ---------------------------------------------------------*/

extern uint16_t                 MBx_utility_crc16(uint8_t *data, uint16_t len);
extern void                     MBx_utility_MemMove(void *dest, const void *src, size_t n);
extern void                     MBxErrTraceAdd(uint8_t SlaveID, uint8_t mode, uint8_t State, uint32_t ErrCode);
extern uint32_t                 MBxErrTraceGet(uint8_t *SlaveID, uint8_t *mode, uint8_t *State, uint32_t *ErrCode);
extern uint32_t                 MBx_utility_map_addr_data_read(const _MBX_MAP_LIST_ENTRY *Map, uint16_t MapNum, uint16_t Addr, uint16_t *Data, uint8_t mode);