port/h_level/python/MBx_bindings.py


# E:\\PY64_PROJECT\\CDLL_TEST\\h\\MBx_api.h: 349
for _lib in _libs.values():
    if not _lib.has("MBx_Slave_RTU_Init", "cdecl"):
        continue
    MBx_Slave_RTU_Init = _lib.get("MBx_Slave_RTU_Init", "cdecl")
    MBx_Slave_RTU_Init.argtypes = [POINTER(_MBX_SLAVE), uint8_t, POINTER(_MBX_MAP_LIST_ENTRY), MBX_SEND_PTR, MBX_GTEC_PTR, uint32_t, POINTER(uint8_t), uint32_t, POINTER(uint8_t), uint32_t]
    MBx_Slave_RTU_Init.restype = uint32_t
    break

# E:\\PY64_PROJECT\\CDLL_TEST\\h\\MBx_api.h: 350
for _lib in _libs.values():
    if not _lib.has("MBx_Slave_TCP_Init", "cdecl"):
        continue
    MBx_Slave_TCP_Init = _lib.get("MBx_Slave_TCP_Init", "cdecl")
    MBx_Slave_TCP_Init.argtypes = [POINTER(_MBX_SLAVE), uint8_t, POINTER(_MBX_MAP_LIST_ENTRY), MBX_SEND_PTR, MBX_GTEC_PTR, POINTER(uint8_t), uint32_t, POINTER(uint8_t), uint32_t]
    MBx_Slave_TCP_Init.restype = uint32_t
    break

# E:\\PY64_PROJECT\\CDLL_TEST\\h\\MBx_api.h: 352
for _lib in _libs.values():
    if not _lib.has("MBx_Master_RTU_Init", "cdecl"):
        continue
    MBx_Master_RTU_Init = _lib.get("MBx_Master_RTU_Init", "cdecl")
    MBx_Master_RTU_Init.argtypes = [POINTER(_MBX_MASTER), MBX_SEND_PTR, MBX_GTEC_PTR, uint32_t, POINTER(uint8_t), uint32_t, POINTER(uint8_t), uint32_t]
    MBx_Master_RTU_Init.restype = uint32_t
    break

# E:\\PY64_PROJECT\\CDLL_TEST\\h\\MBx_api.h: 353
for _lib in _libs.values():
    if not _lib.has("MBx_Master_TCP_Init", "cdecl"):
        continue
    MBx_Master_TCP_Init = _lib.get("MBx_Master_TCP_Init", "cdecl")
    MBx_Master_TCP_Init.argtypes = [POINTER(_MBX_MASTER), MBX_SEND_PTR, MBX_GTEC_PTR, POINTER(uint8_t), uint32_t, POINTER(uint8_t), uint32_t]
    MBx_Master_TCP_Init.restype = uint32_t
    break

# E:\\PY64_PROJECT\\CDLL_TEST\\h\\MBx_api.h: 354
for _lib in _libs.values():
    if not _lib.has("MBx_Master_Member_Add", "cdecl"):
        continue
    MBx_Master_Member_Add = _lib.get("MBx_Master_Member_Add", "cdecl")
    MBx_Master_Member_Add.argtypes = [POINTER(_MBX_MASTER), POINTER(_MBX_MASTER_TEAM_MEMBER), uint8_t, POINTER(_MBX_MAP_LIST_ENTRY)]
    MBx_Master_Member_Add.restype = uint32_t
    break

# E:\\PY64_PROJECT\\CDLL_TEST\\h\\MBx_api.h: 355
for _lib in _libs.values():
    if not _lib.has("MBx_Master_Error_Get", "cdecl"):
        continue
    MBx_Master_Error_Get = _lib.get("MBx_Master_Error_Get", "cdecl")
    MBx_Master_Error_Get.argtypes = [POINTER(_MBX_MASTER), POINTER(uint8_t), POINTER(uint8_t), POINTER(uint16_t), POINTER(uint16_t)]
    MBx_Master_Error_Get.restype = uint32_t
    break

# E:\\PY64_PROJECT\\CDLL_TEST\\h\\MBx_api.h: 356
for _lib in _libs.values():
    if not _lib.has("MBx_Master_Read_Coil_Request", "cdecl"):
        continue
    MBx_Master_Read_Coil_Request = _lib.get("MBx_Master_Read_Coil_Request", "cdecl")
    MBx_Master_Read_Coil_Request.argtypes = [POINTER(_MBX_MASTER), uint8_t, uint16_t, uint16_t]
    MBx_Master_Read_Coil_Request.restype = uint32_t
    break

# E:\\PY64_PROJECT\\CDLL_TEST\\h\\MBx_api.h: 357
for _lib in _libs.values():
    if not _lib.has("MBx_Master_Read_Disc_Input_Request", "cdecl"):
        continue
    MBx_Master_Read_Disc_Input_Request = _lib.get("MBx_Master_Read_Disc_Input_Request", "cdecl")
    MBx_Master_Read_Disc_Input_Request.argtypes = [POINTER(_MBX_MASTER), uint8_t, uint16_t, uint16_t]
    MBx_Master_Read_Disc_Input_Request.restype = uint32_t
    break

# E:\\PY64_PROJECT\\CDLL_TEST\\h\\MBx_api.h: 358
for _lib in _libs.values():
    if not _lib.has("MBx_Master_Read_Reg_Request", "cdecl"):
        continue
    MBx_Master_Read_Reg_Request = _lib.get("MBx_Master_Read_Reg_Request", "cdecl")
    MBx_Master_Read_Reg_Request.argtypes = [POINTER(_MBX_MASTER), uint8_t, uint16_t, uint16_t]
    MBx_Master_Read_Reg_Request.restype = uint32_t
    break

# E:\\PY64_PROJECT\\CDLL_TEST\\h\\MBx_api.h: 359
for _lib in _libs.values():
    if not _lib.has("MBx_Master_Read_Input_Reg_Request", "cdecl"):
        continue
    MBx_Master_Read_Input_Reg_Request = _lib.get("MBx_Master_Read_Input_Reg_Request", "cdecl")
    MBx_Master_Read_Input_Reg_Request.argtypes = [POINTER(_MBX_MASTER), uint8_t, uint16_t, uint16_t]
    MBx_Master_Read_Input_Reg_Request.restype = uint32_t
    break

# E:\\PY64_PROJECT\\CDLL_TEST\\h\\MBx_api.h: 360
for _lib in _libs.values():
    if not _lib.has("MBx_Master_Write_Coil_Request", "cdecl"):
        continue
    MBx_Master_Write_Coil_Request = _lib.get("MBx_Master_Write_Coil_Request", "cdecl")
    MBx_Master_Write_Coil_Request.argtypes = [POINTER(_MBX_MASTER), uint8_t, uint16_t, uint16_t]
    MBx_Master_Write_Coil_Request.restype = uint32_t
    break

# E:\\PY64_PROJECT\\CDLL_TEST\\h\\MBx_api.h: 361
for _lib in _libs.values():
    if not _lib.has("MBx_Master_Write_Reg_Request", "cdecl"):
        continue
    MBx_Master_Write_Reg_Request = _lib.get("MBx_Master_Write_Reg_Request", "cdecl")
    MBx_Master_Write_Reg_Request.argtypes = [POINTER(_MBX_MASTER), uint8_t, uint16_t, uint16_t]
    MBx_Master_Write_Reg_Request.restype = uint32_t
    break

# E:\\PY64_PROJECT\\CDLL_TEST\\h\\MBx_api.h: 362
for _lib in _libs.values():
    if not _lib.has("MBx_Master_Write_Coil_Mul_Request", "cdecl"):
        continue
    MBx_Master_Write_Coil_Mul_Request = _lib.get("MBx_Master_Write_Coil_Mul_Request", "cdecl")
    MBx_Master_Write_Coil_Mul_Request.argtypes = [POINTER(_MBX_MASTER), uint8_t, uint16_t, uint16_t, POINTER(uint8_t), uint16_t]
    MBx_Master_Write_Coil_Mul_Request.restype = uint32_t
    break

# E:\\PY64_PROJECT\\CDLL_TEST\\h\\MBx_api.h: 363
for _lib in _libs.values():
    if not _lib.has("MBx_Master_Write_Reg_Mul_Request", "cdecl"):
        continue
    MBx_Master_Write_Reg_Mul_Request = _lib.get("MBx_Master_Write_Reg_Mul_Request", "cdecl")
    MBx_Master_Write_Reg_Mul_Request.argtypes = [POINTER(_MBX_MASTER), uint8_t, uint16_t, uint16_t, POINTER(uint8_t), uint16_t]
    MBx_Master_Write_Reg_Mul_Request.restype = uint32_t
    break

# E:\\PY64_PROJECT\\CDLL_TEST\\h\\MBx_api.h: 367
for _lib in _libs.values():
    if not _lib.has("MBx_Init_Runtime", "cdecl"):
        continue
    MBx_Init_Runtime = _lib.get("MBx_Init_Runtime", "cdecl")
    MBx_Init_Runtime.argtypes = [POINTER(_MBX_COMMON_RUNTIME)]
    MBx_Init_Runtime.restype = None
    break

# E:\\PY64_PROJECT\\CDLL_TEST\\h\\MBx_api.h: 368
for _lib in _libs.values():
    if not _lib.has("MBx_Init_Attr", "cdecl"):
        continue
    MBx_Init_Attr = _lib.get("MBx_Init_Attr", "cdecl")
    MBx_Init_Attr.argtypes = [POINTER(_MBX_COMMON_CONFIG), uint8_t, uint8_t, uint32_t, uint32_t]
    MBx_Init_Attr.restype = None
    break

# E:\\PY64_PROJECT\\CDLL_TEST\\h\\MBx_api.h: 369
for _lib in _libs.values():
    if not _lib.has("MBx_Init_Slave_Parse", "cdecl"):
        continue
    MBx_Init_Slave_Parse = _lib.get("MBx_Init_Slave_Parse", "cdecl")
    MBx_Init_Slave_Parse.argtypes = [POINTER(_MBX_SLAVE_PARSE_VALUE)]
    MBx_Init_Slave_Parse.restype = None
    break

# E:\\PY64_PROJECT\\CDLL_TEST\\h\\MBx_api.h: 370
for _lib in _libs.values():
    if not _lib.has("MBx_Init_Slave_Config", "cdecl"):
        continue
    MBx_Init_Slave_Config = _lib.get("MBx_Init_Slave_Config", "cdecl")
    MBx_Init_Slave_Config.argtypes = [POINTER(_MBX_SLAVE_CONFIG), uint8_t, POINTER(_MBX_MAP_LIST_ENTRY)]
    MBx_Init_Slave_Config.restype = uint32_t
    break

# E:\\PY64_PROJECT\\CDLL_TEST\\h\\MBx_api.h: 371
for _lib in _libs.values():
    if not _lib.has("MBx_Init_Master_Parse", "cdecl"):
        continue
    MBx_Init_Master_Parse = _lib.get("MBx_Init_Master_Parse", "cdecl")
    MBx_Init_Master_Parse.argtypes = [POINTER(_MBX_MASTER_PARSE_VALUE)]
    MBx_Init_Master_Parse.restype = None
    break

# E:\\PY64_PROJECT\\CDLL_TEST\\h\\MBx_api.h: 372
for _lib in _libs.values():
    if not _lib.has("MBx_Init_Master_Error", "cdecl"):
        continue
    MBx_Init_Master_Error = _lib.get("MBx_Init_Master_Error", "cdecl")
    MBx_Init_Master_Error.argtypes = [POINTER(_MBX_MASTER_ERROR_RING)]
    MBx_Init_Master_Error.restype = None
    break

# E:\\PY64_PROJECT\\CDLL_TEST\\h\\MBx_api.h: 373
for _lib in _libs.values():
    if not _lib.has("MBx_Init_Master_Request", "cdecl"):
        continue
    MBx_Init_Master_Request = _lib.get("MBx_Init_Master_Request", "cdecl")
    MBx_Init_Master_Request.argtypes = [POINTER(_MBX_MASTER_REQUEST_RING)]
    MBx_Init_Master_Request.restype = None
    break

# E:\\PY64_PROJECT\\CDLL_TEST\\h\\MBx_api.h: 374
for _lib in _libs.values():
    if not _lib.has("MBx_Init_Master_Config", "cdecl"):
        continue
    MBx_Init_Master_Config = _lib.get("MBx_Init_Master_Config", "cdecl")
    MBx_Init_Master_Config.argtypes = [POINTER(_MBX_MASTER_TEAM_MEMBER), uint8_t, POINTER(_MBX_MAP_LIST_ENTRY)]
    MBx_Init_Master_Config.restype = uint32_t
    break

# E:\\PY64_PROJECT\\CDLL_TEST\\h\\MBx_utility.h: 243
class struct_anon_14(Structure):
    pass

struct_anon_14.__slots__ = [
    'L8',
    'H8',
]
struct_anon_14._fields_ = [
    ('L8', uint8_t),
    ('H8', uint8_t),
]

_MBX_CRC16_H_L = struct_anon_14# E:\\PY64_PROJECT\\CDLL_TEST\\h\\MBx_utility.h: 243

# E:\\PY64_PROJECT\\CDLL_TEST\\h\\MBx_utility.h: 248
class union__MBX_CRC16_R_(Union):
    pass

union__MBX_CRC16_R_.__slots__ = [
    'Val',
    'H_L',
]
union__MBX_CRC16_R_._fields_ = [
    ('Val', uint16_t),
    ('H_L', _MBX_CRC16_H_L),
]

_MBX_CRC16 = union__MBX_CRC16_R_# E:\\PY64_PROJECT\\CDLL_TEST\\h\\MBx_utility.h: 248

# E:\\PY64_PROJECT\\CDLL_TEST\\h\\MBx_utility.h: 260
class struct_anon_15(Structure):
    pass

struct_anon_15.__slots__ = [
    'SlaveID',
    'mode',
    'State',
    'reg',
    'ErrCode',
]
struct_anon_15._fields_ = [
    ('SlaveID', uint8_t),
    ('mode', uint8_t, 1),
    ('State', uint8_t, 4),
    ('reg', uint8_t, 3),
    ('ErrCode', uint32_t),
]

_MBX_ERR_TRACE = struct_anon_15# E:\\PY64_PROJECT\\CDLL_TEST\\h\\MBx_utility.h: 260

# E:\\PY64_PROJECT\\CDLL_TEST\\h\\MBx_utility.h: 264
for _lib in _libs.values():
    try:
        MBxErrTraceStack = (POINTER(_MBX_ERR_TRACE)).in_dll(_lib, "MBxErrTraceStack")
        break
    except:
        pass

# E:\\PY64_PROJECT\\CDLL_TEST\\h\\MBx_utility.h: 268
for _lib in _libs.values():
    if not _lib.has("MBx_utility_crc16", "cdecl"):
        continue
    MBx_utility_crc16 = _lib.get("MBx_utility_crc16", "cdecl")
    MBx_utility_crc16.argtypes = [POINTER(uint8_t), uint16_t]
    MBx_utility_crc16.restype = uint16_t
    break

# E:\\PY64_PROJECT\\CDLL_TEST\\h\\MBx_utility.h: 270
for _lib in _libs.values():
    if not _lib.has("MBx_utility_MemMove", "cdecl"):
        continue
    MBx_utility_MemMove = _lib.get("MBx_utility_MemMove", "cdecl")
    MBx_utility_MemMove.argtypes = [POINTER(None), POINTER(None), c_size_t]
    MBx_utility_MemMove.restype = None
    break

# E:\\PY64_PROJECT\\CDLL_TEST\\h\\MBx_utility.h: 272
for _lib in _libs.values():
    if not _lib.has("MBxErrTraceAdd", "cdecl"):
        continue
    MBxErrTraceAdd = _lib.get("MBxErrTraceAdd", "cdecl")
    MBxErrTraceAdd.argtypes = [uint8_t, uint8_t, uint8_t, uint32_t]
    MBxErrTraceAdd.restype = None
    break

# E:\\PY64_PROJECT\\CDLL_TEST\\h\\MBx_utility.h: 273
for _lib in _libs.values():
    if not _lib.has("MBxErrTraceGet", "cdecl"):
        continue
    MBxErrTraceGet = _lib.get("MBxErrTraceGet", "cdecl")
    MBxErrTraceGet.argtypes = [POINTER(uint8_t), POINTER(uint8_t), POINTER(uint8_t), POINTER(uint32_t)]
    MBxErrTraceGet.restype = uint32_t
    break

# E:\\PY64_PROJECT\\CDLL_TEST\\h\\MBx_utility.h: 275
for _lib in _libs.values():
    if not _lib.has("MBx_utility_map_addr_data_read", "cdecl"):
        continue
    MBx_utility_map_addr_data_read = _lib.get("MBx_utility_map_addr_data_read", "cdecl")
    MBx_utility_map_addr_data_read.argtypes = [POINTER(_MBX_MAP_LIST_ENTRY), uint16_t, uint16_t, POINTER(uint16_t), uint8_t]
    MBx_utility_map_addr_data_read.restype = uint32_t
    break
